# TalkUp.AI

./: .dockerignore  .gitignore  CONTRIBUTING.MD  Dockerfile  README.md  nixpacks.toml  package-lock.json  package.json  railway.json
.github/: discord_users.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/actions/notify-discord/: README.MD  README.md  action.yml
.github/actions/notify-teams/: README.md  action.yml  entrypoint.sh
.github/actions/push-mirror/: action.yml
.github/actions/push-to-mirror/: README.md  action.yml
.github/actions/run-coverage-check/: README.md  action.yml
.github/actions/run-e2e-tests/: README.md  action.yml
.github/actions/run-quality-check/: README.md  action.yml
.github/actions/run-units-tests/: README.md  action.yml
.github/actions/setup-node-and-cache/: README.md  action.yml
.github/actions/setup-node-with-cache/: README.md  action.yml
.github/workflows/: README.md  code-quality.yml  discord-notifications.yml  e2e-tests.yml  full-ci.yml  mirror-push.yml  teams-notifications.yml  unit-tests.yml
ai/: docker-compose.yml
ai/core/: constants.py
ai/core/microservices/: enumMcs.py  notifications.py
ai/core/server/: CMakeLists.txt  Dockerfile  main.cpp  services.json
ai/core/server/inc/: ExceptionManager.hpp  IServer.hpp  Notifications.hpp  Server.hpp
ai/core/server/inc/network/: MicroservicesManager.hpp  Router.hpp  WebsocketManager.hpp
ai/core/server/protocol/: Communication_Protocol_AI_Server_Frontend_EN.md  Protocole_Communication_ServeurIA_Frontend_FR.md
ai/core/server/protocol/EN/: Communication_Protocol_AI_Server_Frontend_EN.md  Communication_Protocol_microservices_IA_server.md
ai/core/server/protocol/FR/: Protocole_Communication_Microservices_ServeurIA.md  Protocole_Communication_ServeurIA_Frontend_FR.md
ai/core/server/src/: ExceptionManager.cpp  Notifications.cpp  Server.cpp
ai/core/server/src/network/: MicroservicesManager.cpp  Router.cpp  WebsocketManager.cpp
ai/core/server/tests/: test_server_init.cpp
ai/microservices/behavior-analyzer/: main.py
ai/microservices/emotional-analyzer/: main.py  requirements.txt
ai/microservices/network/: protocol.py  websockets.py
ai/microservices/speech-to-text/: Dockerfile  main.py  requirements.txt  setup_stt.sh
ai/microservices/text-to-speech/: Dockerfile  main.py  requirements.txt
ai/microservices/verbal-analyzer/: main.py
server/: Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  nest-cli.json  oxlintrc.json  package-lock.json  package.json  railway.json  tsconfig.build.json  tsconfig.json
server/src/: app.module.ts  health.controller.spec.ts  health.controller.ts  main.ts
server/src/auth/: auth.controller.spec.ts  auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts
server/src/config/: postgres.config.ts  swagger.config.ts
server/src/entities/: agenda.entity.ts  aiInterview.entity.ts  aiTranscript.entity.ts  organization.entity.ts  user.entity.ts  userOrganization.entity.ts
server/src/organization/: organization.controller.ts  organization.module.ts  organization.service.ts
server/src/sockets/: testSockets.gateway.ts
server/src/users/: users.module.ts  users.service.ts
server/talkup-backend-bruno/: bruno.json  collection.bru  health.bru
server/talkup-backend-bruno/ai/: get interview.bru  get interviews.bru  post interviews.bru  post transcript.bru  put interview.bru
server/talkup-backend-bruno/auth/: login.bru  register.bru
server/test/: app.e2e-spec.ts
tools/test-ws-server/: README.md  package-lock.json  package.json  server.js
web/: .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  index.html  oxlintrc.json  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.playwright.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
web/src/: main.tsx  routeTree.gen.ts
web/src/config/: env.test.ts  env.ts  navigation-contexts.spec.ts  navigation-contexts.ts  routes.config.spec.ts  routes.config.ts
web/src/contexts/: AuthContext.tsx  NavigationContext.spec.tsx  NavigationContext.tsx  ThemeContext.tsx
web/src/hooks/: use-addevent-interaction.ts
web/src/routes/: -cv-analysis.spec.tsx  -diary.spec.tsx  -not-found.tsx  -profile.spec.tsx  -progression.spec.tsx  -simulations.spec.tsx  AI-Chat.tsx  About.tsx  CV-Analysis.tsx  Dashboard.tsx  Diary.tsx  Login.tsx  Notes.tsx  Profile.tsx  Progression.tsx  SignUp.tsx  Signup.tsx  Simulations.tsx  __root.tsx  about.tsx  agenda.tsx  ai-chat.tsx  cv-analysis.tsx  dashboard.tsx  diary.tsx  index.tsx  login.tsx  notes.tsx  (+4 more)
web/tests/: example.spec.ts  time.spec.ts
(+321 files in other folders)
